--- a/src/main/resources/DatapipelineConfig.json
+++ b/src/main/resources/DatapipelineConfig.json
@@ -1,6 +1,8 @@
 { 
-  "inputDataPath":"F:\\nitun-dev\\sts-workspace\\coustomer-data-pipeline\\data\\input\\customer.json",
-  "dataType": "json",
-  "outputDataPath":"F:\\nitun-dev\\sts-workspace\\coustomer-data-pipeline\\data\\out\\customeroutput.json",
-   "outputDataType": "json"
+  "inputDataPath":"input-shopping-data",
+  "inputDataType": "s3",
+ 
+   "outputDataPath":"output-shopping-data",
+   "outputDataType": "s3"
+   
 }
